change every wrong thing

--- a/index.html
+++ b/index.html
@@ -58,12 +58,8 @@
       </div>
       <div class="about-me-content">
         <p>Hey there! I'm <b>Adrian</b>, a recent high school grad diving headfirst 
-          into the captivating worlds of <b>web development</b> and <b>data science</b>. I'm
-           on a mission to create stunning websites and unravel the secrets hidden 
-           within data. When I'm not coding away, you'll find me on the<b>badminton</b> 
-           court, smashing my way to victory. Join me on this exciting journey as 
-          we unleash the power of technology and embrace the 
-          thrill of competition.
+          into the captivating worlds of <b>web development</b> and <b>data science</b>.  When I'm not coding away, you'll find me on the<b>badminton</b> 
+           court.
         </p>
 
         <button id="about-me-back">Back</button>
