--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       <ul>
 
         <li>
-          <a href="https://banarian.github.io/adrian.github.io/">
+          <a href="https://adr-ian-ba.github.io/adrian.github.io/">
             <i class="fa" aria-hidden="true"></i>
             <span> - My First Web</span>
           </a>
