--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
       <ul>
 
         <li>
-          <a href="https://adr-ian-ba.github.io/adrian.github.io/">
+          <a href="https://colorgen.onrender.com//">
             <i class="fa" aria-hidden="true"></i>
-            <span> - My First Web</span>
+            <span> - Colorgen 🌈</span>
           </a>
         </li>
         
