--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="main.css">
 
     <!-- font awsome -->
-    <<script src="https://use.fontawesome.com/df15630236.js"></script>
+    <script src="https://use.fontawesome.com/df15630236.js"></script>
 
     <!-- font connact -->
     <!-- fonts download -->
